--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect><line x1="8" y1="21" x2="16" y2="21"></line><line x1="12" y1="17" x2="12" y2="21"></line></svg>
         </div>
         <div class="cat-body">
-          <h3>Climatix (클라이매틱스)</h3>
+          <h3>Climatix</h3>
           <p>고성능 HVAC 컨트롤러 Climatix 시리즈에 대한 기술 지원 및 프로그래밍 가이드, 라이브러리를 제공합니다. SAPRO, BACnet 연동 및 통신 설정에 관한 노하우를 확인하세요.</p>
           <div class="cat-tags">
             <a href="#">Climatix C600</a>
@@ -117,7 +117,7 @@
           <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.7a6 6 0 0 1-8.3 8.3l-3.58 3.54a2 2 0 1 1-2.83-2.83l3.54-3.58a6 6 0 0 1 8.3-8.3l-3.7 3.77Z"></path></svg>
         </div>
         <div class="cat-body">
-          <h3>HVAC Instrument (현장 기기)</h3>
+          <h3>HVAC Instrument</h3>
           <p>밸브, 액추에이터, 센서 등 HVAC 현장 기기의 설치, 교정 및 유지보수 정보를 공유합니다. 시스템 효율을 극대화하기 위한 정밀 계측 기기 활용법을 논의합니다.</p>
           <div class="cat-tags">
             <a href="#">Valves / PICV</a>
@@ -140,7 +140,7 @@
           <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" y2="16"></line></svg>
         </div>
         <div class="cat-body">
-          <h3>기타 (커뮤니티 운영)</h3>
+          <h3>기타</h3>
           <p>포럼 공지사항, 이용 규칙 및 서비스 개선 요청을 위한 공간입니다. 깨끗하고 전문적인 기술 공유 문화를 만들기 위해 지켜야 할 가이드를 안내합니다.</p>
           <div class="cat-tags">
             <a href="#">Notice</a>
