--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
       <!-- Category 3: Community -->
       <div class="cat-item" id="others">
         <div class="cat-icon">
-          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" y2="16"></line></svg>
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" i6="16"></line></svg>
         </div>
         <div class="cat-body">
           <h3>기타</h3>
-          <p>포럼 공지사항, 이용 규칙 및 서비스 개선 요청을 위한 공간입니다. 깨끗하고 전문적인 기술 공유 문화를 만들기 위해 지켜야 할 가이드를 안내합니다.</p>
+          <p>기타문의사항을 공유합니다.</p>
           <div class="cat-tags">
             <a href="#">Notice</a>
             <a href="#">Templates</a>
