feat: add Data Sheet(기술자료) category to navigation and list

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <nav class="menu">
         <a href="#climatix">Climatix</a>
         <a href="#hvac">HVAC Instrument</a>
+        <a href="#datasheet">Data Sheet(기술자료)</a>
         <a href="#others">기타</a>
       </nav>
       <div class="top-actions">
@@ -134,7 +135,29 @@
         </div>
       </div>
 
-      <!-- Category 3: Community -->
+      <!-- Category 3: Data Sheet -->
+      <div class="cat-item" id="datasheet">
+        <div class="cat-icon">
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+        </div>
+        <div class="cat-body">
+          <h3>Data Sheet(기술자료)</h3>
+          <p>지멘스 제품의 기술 사양서 및 데이터 시트를 공유하고 확인하는 공간입니다.</p>
+          <div class="cat-tags">
+            <a href="#">Technical Data</a>
+            <a href="#">Catalog</a>
+            <a href="#">Manuals</a>
+            <a href="#">Dimension</a>
+          </div>
+        </div>
+        <div class="cat-stats">
+          <div class="stat-box"><span class="data-val">2,145</span> <span class="stat-label">REPLIES</span></div>
+          <div class="stat-box"><span class="data-val">45</span> <span class="stat-label">TOPICS</span></div>
+          <div class="stat-box"><span class="data-val">3h ago</span> <span class="stat-label">LAST POST</span></div>
+        </div>
+      </div>
+
+      <!-- Category 4: Community -->
       <div class="cat-item" id="others">
         <div class="cat-icon">
           <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" i6="16"></line></svg>
