--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
     <div class="container">
       <div class="footer-grid">
         <div class="footer-col">
-          <h4 style="color:#fff; font-size:20px;">Technical Forum</h4>
-          <p style="opacity:0.6; font-size:14px; line-height:1.8;">엔지니어들의 지식 공유를 통해 더 나은 기술 환경을 만들어갑니다. Siemens Support 포럼에 참여하여 전문가들과 소통하세요.</p>
+          <h4 style="color:#fff; font-size:20px;">Community Forum</h4>
+          <p style="opacity:0.6; font-size:14px; line-height:1.8;">지멘스 User들의 지식공유를 통해 더 나은 기술 환경을 만들어 갑니다. Community Forum에 참여하여 온라인상에서 원활하게 소통하세요.</p>
         </div>
       </div>
       <div class="footer-bottom">
